--- a/app/views/ideator_lessons/lessons/lesson_18.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_18.html.erb
@@ -1,7 +1,7 @@
 <h1><%= title_for(IdeatorLesson, 6, 2) %></h1>
 
 <p>
-  Under <code>/app/views/ideas/</code> make a file called <code>about.html.erb</code>.
+  Under <code>/app/views/static_pages/</code> make a file called <code>about.html.erb</code>.
 </p>
 
 <p>
@@ -52,7 +52,7 @@
 
 
 <p>
-  Now let's hook this up to the navigation bar so that people can navigate to the about page easily. Go to <code>application.html.erb</code>.
+  Now let's add the link to this page on the navigation bar so that people can navigate to the about page easily. Go to <code>application.html.erb</code>.
 </p>
 
 <p>
@@ -76,7 +76,11 @@
 </code></pre>
 
 <p>
-  Awesome! Let's now move on to building the "Random" page.
+  Let's try this out. If you go to <code>http://localhost:3000/about</code>, you should see your about page. Awesome!
+</p>
+
+<p>
+  Let's now move on to building the "Random" page.
 </p>
 
 <%= standard_git_workflow %>
