--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -1,3 +1,19 @@
+.fa-facebook-official {
+  color: #3b5998;
+}
+
+.fa-twitter-square {
+  color: #55ACEE;
+}
+
+.fa-github-square {
+  color: #333;
+}
+
+.fa-globe {
+  color: #0000EE;
+}
+
 .btn-back {
   border-radius: 100px;
   margin-bottom: 10px;
