--- a/app/assets/stylesheets/mentees.scss
+++ b/app/assets/stylesheets/mentees.scss
@@ -1,3 +1,12 @@
+.social-links {
+  margin-top: 10px;
+  font-size: 30px;
+  .fa {
+    margin-right: 5px;
+    margin-left: 5px;
+  }
+}
+
 .mentee-panel {
   padding: 20px;
   border: 2px solid #ddd;
