--- a/app/views/mentees/index.html.erb
+++ b/app/views/mentees/index.html.erb
@@ -12,8 +12,16 @@
   <div class="mentee-panel text-center">
     <%= image_tag mentee.avatar, class: 'prof_pic_sm' %>
     <h3><%= mentee.name %></h3>
-    <h5><%= display_date @mentee.try(:start_date) %></h5>
-    <h5><%= display_date @mentee.try(:graduation_date) %></h5>
+    <h5><%= display_date mentee.try(:start_date) %></h5>
+    <h5><%= display_date mentee.try(:graduation_date) %></h5>
+
+    <div class="social-links">
+      <%= link_to '<i class="fa fa-facebook-official" aria-hidden="true"></i>'.html_safe, mentee.facebook_handle if mentee.facebook_handle %>
+      <%= link_to '<i class="fa fa-twitter-official" aria-hidden="true"></i>'.html_safe, mentee.twitter_handle if mentee.twitter_handle %>
+      <%= link_to '<i class="fa fa-github-official" aria-hidden="true"></i>'.html_safe, mentee.github_handle if mentee.github_handle %>
+      <%= link_to '<i class="fa fa-globe" aria-hidden="true"></i>'.html_safe, mentee.personal_website if mentee.personal_website %>
+    </div>
+
     <h5><%= pluralize mentee.remaining_mentor_sessions, "mentor session" %> left</h5>
     <%= link_to "View Mentor Logs", mentee_mentor_sessions_path(mentee_id: mentee.id) %>
   </div>
