--- a/app/views/layouts/_nav_contents.html.erb
+++ b/app/views/layouts/_nav_contents.html.erb
@@ -42,6 +42,12 @@
                     <li class="nav-item dropdown">
                         <a class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-delay="0" data-close-others="false" href="#"><%= image_tag current_user.avatar, class: 'prof_pic_nav' %> <i class="fa fa-angle-down"></i></a>
                         <ul class="dropdown-menu">
+                            <% if current_user.start_date && current_user.graduation_date %>
+                                <li><a style="text-transform: uppercase;"><%= pluralize ((current_user.graduation_date - current_user.start_date)/1.day).to_i, 'DAY' %> UNTIL GRADUATION</a></li>
+                            <% elsif !current_user.mentor || !current_user.admin %>
+                                <li><a style="text-transform: uppercase;">- DAYS UNTIL GRADUATION</a></li>
+                            <% end %>
+
                             <% if current_user.mentor %>
                                 <li><%= link_to 'MENTOR LOGS', mentees_path %></li>
                             <% else %>
