--- a/app/views/mentees/index.html.erb
+++ b/app/views/mentees/index.html.erb
@@ -14,23 +14,32 @@
   </div>
 <% end %>
 
-<% @mentees.each do |mentee| %>
-<div class="col-xs-12 col-sm-4">
-  <div class="mentee-panel text-center">
-    <%= image_tag mentee.avatar, class: 'prof_pic_sm' %>
-    <h3><%= mentee.name %></h3>
-    <h5><strong>Start Date:</strong> <%= display_date mentee.try(:start_date) %></h5>
-    <h5><strong>Graduation Date:</strong> <%= display_date mentee.try(:graduation_date) %></h5>
+<% @mentees.each_with_index do |mentee, i| %>
+  <% if i % 3 == 1 || i == 0 %>
+    <div class="row">
+  <% end %>
 
-    <div class="social-links">
-        <%= link_to '<i class="fa fa-facebook-official" aria-hidden="true"></i>'.html_safe, "https://www.facebook.com/" + mentee.facebook_handle if mentee.facebook_handle.present? %>
-        <%= link_to '<i class="fa fa-twitter-official" aria-hidden="true"></i>'.html_safe, "https://twitter.com/" + mentee.twitter_handle if mentee.twitter_handle.present? %>
-        <%= link_to '<i class="fa fa-github-official" aria-hidden="true"></i>'.html_safe, "https://github.com/" + mentee.github_handle if mentee.github_handle.present? %>
-        <%= link_to '<i class="fa fa-globe" aria-hidden="true"></i>'.html_safe, mentee.personal_website if mentee.personal_website.present? %>
-      </div>
+  <div class="col-xs-12 col-sm-4">
+    <div class="mentee-panel text-center">
+      <%= image_tag mentee.avatar, class: 'prof_pic_sm' %>
+      <h3><%= mentee.name %></h3>
+      <h5><strong>Start Date:</strong> <%= display_date mentee.try(:start_date) %></h5>
+      <h5><strong>Graduation Date:</strong> <%= display_date mentee.try(:graduation_date) %></h5>
 
-    <h5><%= pluralize mentee.remaining_mentor_sessions, "mentor session" %> left</h5>
-    <%= link_to '<i class="fa fa-caret-right" aria-hidden="true"></i> View Mentor Logs'.html_safe, mentee_mentor_sessions_path(mentee_id: mentee.id) %>
+      <div class="social-links">
+          <%= link_to '<i class="fa fa-facebook-official" aria-hidden="true"></i>'.html_safe, "https://www.facebook.com/" + mentee.facebook_handle if mentee.facebook_handle.present? %>
+          <%= link_to '<i class="fa fa-twitter-official" aria-hidden="true"></i>'.html_safe, "https://twitter.com/" + mentee.twitter_handle if mentee.twitter_handle.present? %>
+          <%= link_to '<i class="fa fa-github-official" aria-hidden="true"></i>'.html_safe, "https://github.com/" + mentee.github_handle if mentee.github_handle.present? %>
+          <%= link_to '<i class="fa fa-globe" aria-hidden="true"></i>'.html_safe, mentee.personal_website if mentee.personal_website.present? %>
+        </div>
+
+      <h5><%= pluralize mentee.remaining_mentor_sessions, "mentor session" %> left</h5>
+      <%= link_to '<i class="fa fa-caret-right" aria-hidden="true"></i> View Mentor Logs'.html_safe, mentee_mentor_sessions_path(mentee_id: mentee.id) %>
+    </div>
   </div>
-</div>
+
+  <% if i % 3 == 0 || i != 0 %>
+    </div>
+  <% end %>
+
 <% end %>
