update foobar instructions

--- a/app/views/ruby_lessons/lessons/lesson_3.html.erb
+++ b/app/views/ruby_lessons/lessons/lesson_3.html.erb
@@ -76,29 +76,20 @@ Foo
 Foo
 </code></pre>
 
-<h3>First Steps</h3>
+<h3>How to run the code</h3>
+
 <p>
-  First, go into Sublime text and save a file called <code>foobar.rb</code> into <code>~desktop</code>.
+  First, go to <%= link_to 'this website', 'https://repl.it/languages/ruby' %>. Here, you can write ruby code and run the code inside the browser.
 </p>
 
 <p>
-  Next, let's navigate to your desktop. Go into your terminal and type in the following:
+  Next, write your code in the text editor:
 </p>
 
-<pre><code class="bash">
-cd ~/desktop
-</code></pre>
+<%= image_tag 'ruby_lessons/repl_code.png', class: 'img-responsive screenshot' %>
 
 <p>
-  Lastly, to run your ruby file, type in the following in your terminal:
-</p>
-
-<pre><code class="bash">
-ruby foobar.rb
-</code></pre>
-
-<p>
-  Press enter. This shouldn't do anything since you haven't wrote any code in the file yet. Now that you've got everything set up, put your ruby code in your <code>foobar.rb</code> file, and when you want to run the file, type in <code>ruby foobar.rb</code>.
+  Next, press "run", and check your output.
 </p>
 
 <div class="well">
